# spumoni

./: CMakeLists.txt
benchmarks/src/: CMakeLists.txt  rif_tests.cpp  rle_string_tests.cpp
include/common/: common.hpp
include/ms/: CMakeLists.txt  ms_rle_string.hpp  r-index-f.hpp  r_index_f.hpp  spumoni.hpp
test/src/: CMakeLists.txt  build_LF_table.cpp  run_LF_table.cpp
